# orc

./: meson.build  meson_options.txt
doc/: meson.build
examples/: meson.build
orc/: generate-emulation.c  meson.build  orc.h  orcarm.h  orcbytecode.h  orccode.h  orccompiler.h  orccpu.h  orcdebug.h  orcemulateopcodes.h  orcexecutor.h  orcfunctions.c  orcfunctions.h  orcinternal.h  orcmips.c  orcmips.h  orcmmx.h  orcneon.h  orconce.h  orcopcode.h  orcparse.h  orcpowerpc.h  orcprogram-c.c  orcprogram-mips.c  orcprogram.h  orcrule.h  orcrules-mips.c  orcsse.h  orctarget.h  orcutils.h  orcx86.h
orc-test/: meson.build  orcarray.h  orcprofile.h  orcrandom.h  orctest.h
testsuite/: meson.build
testsuite/benchmorc/: meson.build
testsuite/orcc/: meson.build
tools/: meson.build  orcc.c
